--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body::before {
         linear-gradient(to bottom, rgba(255, 255, 255, 0.92), rgba(0, 91, 153, 0.15)),
         
         /* ALT KATMAN: Senin resmin */
-        url('/temizlik/img/webarkapla.jpg'); 
+        url('img/webarkapla.jpg'); 
 
     background-position: center center;
     background-repeat: no-repeat;
