--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 body {
     font-family: "Google Sans Flex", sans-serif;
     background-color: white;
-    overflow-x: visible;
+    overflow-x: hidden;
     background-color: #f4f9fd;
     position: relative;
 }
